<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.amebaownd.pikohan_nwiatori.noticemeplz.addEditUser.AddEditUserViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_edit_name_textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintTextAppearance="@style/TextLabelSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="1"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxEms="1"
                android:text="@={viewModel.name}"
                tools:text="aaa" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/add_edit_usingService_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/using_services"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_name_textInputLayout" />


        <Button
            android:id="@+id/add_edit_addService_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_button"
            android:drawableStart="@drawable/ic_add_white_24dp"
            android:padding="8dp"
            android:text="@string/add_service"
            android:onClick="@{()-> viewModel.onAddServiceButtonClicked()}"

            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/add_edit_usingService_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_edit_usingService_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_edit_services_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:add_edit_items="@{viewModel.usingServices}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_addService_button"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="20"
            tools:listitem="@layout/item_services">


        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_edit_confirm_add_user_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@{viewModel.fabColor}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="@{viewModel.isAbleToSave}"
            android:onClick="@{() -> viewModel.onSubmitButtonClicked()}"
            app:srcCompat="@drawable/ic_check_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>