<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.amebaownd.pikohan_nwiatori.noticemeplz.chooseService.ChooseServiceViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="Choose Service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseService_chipGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:text="@={viewModel.address}"
                tools:text="asdfasdf" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chooseService_submit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{()->viewModel.onFabClicked()}"
            android:clickable="@{viewModel.isAbleToSubmit}"
            android:backgroundTint="@{viewModel.fabColor}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check_black_24dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chooseService_chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.chip.Chip
                android:id="@+id/chooseService_line_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="@{viewModel.onChipChose}"
                android:text="@string/line"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                app:chipStrokeColor="@color/colorSelectedChip"
                app:chipBackgroundColor="@color/colorLine" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chooseService_sms_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.onChipChose}"
                android:text="@string/sms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                app:chipStrokeColor="@color/colorSelectedChip"
                app:chipBackgroundColor="@color/colorSMS" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chooseService_slack_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.onChipChose}"
                android:text="@string/slack"
                app:chipStrokeColor="@color/colorSelectedChip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                app:chipBackgroundColor="@color/colorSlack" />
        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>